# fossil-species-references

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  _typos.toml  pyproject.toml  test_species.txt
.devcontainer/: devcontainer.json
.github/workflows/: deptry-check.yaml  ty-check.yaml
.streamlit/: config.toml
assets/: README.md  populate_cache_from_pbdb.py  test_cache_population.py
assets/misc/: resources.md
assets/resources/: example_results.md  taxonomic_databases_research.md
data/: results.parquet
src/: .gitignore  config.toml  config_loader.py  custom_database_design.md  database_queries.py  enhanced_query.py  enhanced_query_functions.py  env_loader.py  example_results.md  gbif_integration_example.py  improved_approach.md  local_data_query.py  nomenclature_databases.py  pbdb_publication_lookup.py  publication_lookup.py  reference_resolver.py  reference_resolver_functions.py  streamlit_app.py  streamlit_app_simplified.py  taxonomy_cache.py  zoobank_query.py
