[project]
name = "fossil-species-references"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "Streamlit application and standalone Python script for retrieving original publication data for fauna using the Paleobiology Database."
license = "Apache-2.0"
readme = "README.md"
keywords = ["python3", "paleobiology", "paleontology", "paleobiology-database", "streamlit" ]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.33.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[project.urls]
Repository = "https://github.com/O957/fossil-species-references"
Issues = "https://github.com/O957/fossil-species-references/issues"
"Author GitHub" = "https://github.com/O957"

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "test"]
